styles.css
/* *{
    max-width: 100%;
    max-height: 100%;
    overflow-wrap: break-word;
} */
nav {
    padding: 50px 100px 50px 100px;
}

html{
    height: 100vh;
    width: 100vw;
    margin: 0;
    padding: 0;
}

body {
    color: white;
    background-image: url("Stars.png");
    background-size: cover;
    margin: 0px;
    padding: 0px;
    overflow: auto;
    height: 100vh;
    width: 100vw;
}

.bgVid{
        width: 100vw;
        height: 100vh;
        object-fit: cover;
        position: fixed;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        z-index: -1;
}

.title {
    padding: 50px 100px 10px 100px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    height: 70%;
}

nav a{
    color: white !important;
    font-weight: bold !important;
    text-decoration: none !important;
}

.logo {
    color: white;
    font-size: 70;
}

.navigator{
    background: rgba(1,23,44,.8);
    border-bottom-color: white;
    border-bottom-style: solid;
    text-align: center;

}

#homeNavigation{
    border-top-color: white;
    border-top-style: solid;
}



.resume{
    display: flex;
    height: auto;
    background: rgba(1,23,44,0.8);
}

.leftCollumn{
    /* display: flex; */
    flex-direction: column;
    min-height: 100%;
    width: 30%;
    border: 0px;
    padding: 0px;
    margin: 1vw;
}

.rightCollumn{
    display: flex;
    flex-direction: column;
    /* align-items: stretch; */
    min-height: 100%;
    width: 70%;
    border: 0px;
    padding: 0px;
    margin: 1vw;

}

@media screen and (max-width: 480px) {
    .resume {
        background: rgba(1,23,44,0.8);
        height: auto;
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .leftCollumn{
        flex-direction: column;
        min-height: 100%;
        width: 100%;
        border: 0px;
        padding: 0px;
        margin: 0px;
  }

  .rightCollumn{
    display: flex;
    flex-direction: column;
    min-height: 100%;
    min-width: 100%;
    border: 0px;
    padding: 0px;
    margin: 0px;
    }
}

.profile{
    min-height: 100%;
    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2);
    background: rgba(255,255,255,0.15);
    margin: 10px;
}

.pfp{
    margin: auto;
    max-width: 100%;
    max-height: 70%;
}

.profile:hover{
    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.8);
    transition: 0.3s;
}

.pfpcontainer{
    position: relative;
}

.caption{
        position: absolute;
        bottom: -24px;
        left: 1px;
        color: white;
        font-size: 3vw;
        text-shadow: 3px 3px 5px black;
}

.infoBox {
    display:flex;
    flex-direction:column;
    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2);
    background-color: (1,23,44,0.95);
    margin: 10px;
    color: white;
    position: relative;
    text-shadow: 1px 1px 1px black;
    background: rgba(255,255,255,0.15);
    /* max-height: 100%; */
    min-width: 100%;
    min-height: 100%;
}

.resumepdf{
    min-width: 100%;
    min-height: 100%;
}

.infoBox:hover{
    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.8);
    transition: 0.3s;

}


.icon{
    font-size: 1.5vw;
    color: white;
    text-align: center;
    vertical-align: middle;
    margin: 10px;
}

.boxHeader{
    font-size: 4vw;
    position: relative;
    top: -3px;
    left: 12px;
}

.boxIcon{
    font-size: 4vw;
    position: relative;
    top: -3px;
    margin-left: 10px;
}

.role{
    /* max-height: 100%; */
    height: auto;
}

.roleName{
    font-size: 2vw;
    text-align: center;
}

.roleDetails{
    display: flex;
    justify-content: space-between;
    align-content: center;
    margin: 10px;
}
.calendarIcon{
    font-size: 1.5vw;
    color: white;
    float: right;

}

.company{
    margin-left: 10px;
    font-size: 1.5vw;
}



hr{
    width: 90%;
    margin: auto;
    color: white;
}

.resumeBullet{
    font-size: 1.2vw;
    word-wrap: break-word;
    max-height: 100%;
    height: auto;
}

.dashboard{
    display: flex;
    flex-direction: row;
    min-height: 90%;
    height: 100%;
    align-items: center;
    justify-content: center;

}
embed{
    width: 80%;
    height: 80%;
    min-height: 100%;
}
.showcasevid{
    width: 80%;
    height: 80%;
}
@media screen and (max-width: 480px) {
    .caption{
        position: absolute;
        bottom: -1vh;
        left: 1vw;
        color: white;
        font-size: 7vw;
        text-shadow: 3px 3px 5px black;
    }

    .icon{
        font-size: 3vw;
        color: white;
        text-align: center;
        vertical-align: middle;
        margin: 10px;
    }

    .boxHeader{
        font-size: 5vw;
        position: relative;
        top: -3px;
        left: 12px;
    }

    .boxIcon{
        font-size: 4vw;
        position: relative;
        top: -3px;
        margin-left: 10px;
    }

    .role{
        height: auto;
    }

    .roleName{
        font-size: 3vw;
        text-align: center;
    }

    .roleDetails{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        align-content: center;
        margin: 10px;
    }
    .calendarIcon{
        font-size: 2.7vw;
        color: white;
        float: right;

    }

    .company{
        margin-left: 10px;
        font-size: 2.7vw;
    }



    hr{
        width: 90%;
        margin: auto;
        color: white;
    }

    .resumeBullet{
        font-size: 2vw;
        word-wrap: break-word;
        max-height: 100%;
        height: auto;
    }
}


.jumbopadding{
    margin: 100px 100px 100px 100px;

}

.jumbospacing{
    display: flex;
    flex-direction: column;
    text-align: center;
    height: 70vh;
    align-items: center;
    justify-content: center;
}

.centerButton{
    box-sizing: content-box;
    background-color: #0d6efd;
    border-radius: 12px;
    border: none;;
    color: white;
}

.centerButton:hover{
    box-shadow: 0px 0px 12px 0 rgba(255, 255, 255, 0.8);
    transition: 0.3s;
}

.gallery{
    /* position: fixed; */
    display: flex;
    flex-direction: column;
    height:100vh;
    width: 100vw;

}
.row{
    display: flex;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    box-size: border-box;
    padding: 10px;
    height: 33%;
    width: 100%;
}

.row > img{
    width: 30%;
    height: 100%;
    object-fit: cover;
    transition: 0.5s;
    padding: 0px;
    margin: 10px;
}

.row > img:hover{
    transform:scale(1.02);
    box-shadow: 0 2px 8px 0 rgba(255, 255, 255, 0.8);
}

.lightbox{
    display: flex;
    position: fixed;
    z-index: 10;
    width: 100%;
    top: 0;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    flex-direction: column;
    justify-content:space-between;
}

.imgPlaceholder{
    display: flex;
    flex-direction: column;
    align-items: center;
    object-fit: contain;
    max-height: 100%;
    max-width: 50%;
    height: 100%;
    width: 100%;
}
.controlsContainer{
    display: flex;
    flex-direction: row;
    top: 0;
    height: 100%;
    justify-content: center;
    

}

.modalImg{

    position: fixed;
    min-height: 50%;
    max-height: 50%;
    height: 50%;
    top: 25%;

    max-width: 100%;
    min-width: 100%;
    width: 100%;

    display: flex;
    object-fit: contain;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;

    margin: 0px;
    flex-wrap: wrap
}


#spotlightImg{
    max-width: 100%;
    width: 100%;
    max-height: 100%;
    height: 100%;
    object-fit: fill;
    box-shadow: 0px 0px 12px 0 rgba(255, 255, 255, 0.8);
    border: solid;
    border-color: black;
}

.prev{
    /* position: fixed; */
    /* top: 50%;
    left: 20%; */
    font-size: 2.5vw;
    transition: 0.2s;
    transition-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);
    text-decoration: none;
    color: white;
    padding: 10px 30px 10px 30px;
    border-radius: 15px;
}

.prev:hover{
    color: black;
    background-color: white;
    text-decoration: none;
    cursor: pointer;
}

.next{
    /* position: fixed; */
    /* top: 50%;
    right: 20%; */
    font-size: 2.5vw;
    transition: 0.2s;
    transition-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);
    text-decoration: none;
    color: white;
    padding: 10px 30px 10px 30px;
    border-radius: 15px;
}

.next:hover{
    color: black;
    background-color: white;
    text-decoration: none;
    cursor: pointer;
}

.closecont{
    display: flex;
    margin: 50px;
    width: 100%;
    align-items: center;
    justify-content: center;
}


.closed{
    font-size: 2.5vw;
    color: White;
    /* position: absolute;
    top: 90%;
    center: 0; */
    padding: 0px 20px 0px 20px;
    margin: 5px;
    border-radius: 15px;
    transition: 0.2s;
    transition-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);
}

.closed:hover{
    color: black;
    background-color: white;
    text-decoration: none;
    cursor: pointer;
}

.card{
    max-height: 100%;
    height: auto;
}

.contactCards{
    display: flex;
    flex-direction: row;
    height: 100%;
    width: 100%;
    justify-content: space-around;
    align-items: flex-start;
    text-align: center;

}

.cardcontainer{
    border-radius: 15px;
    margin: 1vh;
}

.cardcontainer:hover{
    transform:scale(1.02);
    box-shadow: 0 2px 8px 0 rgba(255, 255, 255, 0.8);
    transition: 0.1s;
}

.cardcontainer > a{
    font-size: .8vw;
}

.card-style{
    max-height: 30%;
    height: 30%;
    margin: 1vw;
    width: 20%;
    font-size: 1vw;
}

.imgstyle{
    width: 100%;
    height: 50%;
    object-fit: contain;
    display: inline-block;

}

#phonenum{
    text-align: center;
}

@media screen and (max-width: 480px) {

    .contactCards{
        display: flex;
        flex-direction: column;
        max-height: 100%;
        height: auto;
        max-width: 100%;
        width: auto;
        justify-content: flex-start;
        align-items: center;
        text-align: center;
    }

    .card{
        max-height: 100%;
        height: 25%;
        max-width: 90%;
        width: 90%;
    }
    .card-text{
        font-size: 5vw;
    }
}

